changed background color to see if this addresses white line issue on ios devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
   flex-direction: column;
   color: #24272b;
   font-family: barlow condensed, sans-serif;
-  background-color: #ffffff;
+  background-color: #3e78b2;
   font-size: 20px;
 }
 
@@ -341,6 +341,7 @@ fieldset {
   justify-content: space-evenly;
   list-style-type: none;
   padding: 10px 0;
+  background-color: #ffffff;
 }
 
 #social-media i {
